# zandre-portfolio-api

./: .env.example  .gitignore  Cargo.toml  Secrets.toml.example
.github/workflows/: rust.yml  shuttle.yml
.sqlx/: query-00c65db9895eb0fff0384194c9a88d89b996b0c473ab6a0eed0ec000223640d6.json  query-26e400da84146f7fe47d717926d5477c513ca64a86b6ca3065210cf102dbd797.json  query-33cc7b05ef6c604b8bae640f49627ed1931029fdd7797aa77f1d5c02b2490880.json  query-59a617367f55c27d9b0988ffa03cc1e16901eeee4907481a6fececc89da55f00.json  query-60b3e49af148ba63e744cd441ae5f4c3a716f2e3a8bd585bf04424774685352c.json  query-6132f2f444d287122b7b5915651ac53cdd1fb428ad81e05bd2da6d559b16a88c.json  query-68c899ea636c229d2e3cd2e3bd48cc82db1108e781e3b60b860f3e9a1bd7e098.json  query-784eb8c26c68175144d5be3ec423e3ff72526194c43a011da1dadd8515c7439f.json  query-83790c602219643322ef4a7451117f8290b704403aa9c7644ddf946ba0d1565e.json  query-8e2ba97b63ea09859459d164f9cace6fbc50d387d4012304d2c78b8f0eba91f0.json  query-9ca271880a7b084caf01ac6029cac74c044f25d0e93b0b1a83ba45722ccfe4da.json  query-a4b2fc9a0c0c696be724d7a423b873a16035d7d9139a03f09b574bc464b8f691.json  query-d371ee18f8fa6724172d67cebec76b5221d990a48f94461f2a928014186018e8.json  query-dc3322077dea5a9e9f0294ea2f8ccc10f737b9b8fb194e5cebaa05e291b25558.json  query-eb3f76229a16218155d7b3eda164d421bdcd588c8e7c83bb3c434ac36c6200c7.json
migrations/: 20240826141635_init.down.sql  20240826141635_init.up.sql
src/: context.rs  error.rs  main.rs  model.rs  web.rs
src/helpers/: passwords.rs
src/model/: auth.rs  blog.rs
src/web/: routes_authentication.rs  (+1 more)
(+6 files in other folders)
