[package]
name = "zandre-portfolio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# shuttle
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# web
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
#database
sqlx = { version = "0.7.4", features = ["chrono"] }
#other
once_cell = "1.8"
chrono = { version = "0.4.38" }
argon2 = { version = "0.5", features = ["std"] }


[dev-dependencies]
anyhow = "1"
